add some product

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Welcome, {{ name }}</h1>
     <p>NPM: {{ npm }}</p>
-    <p>Class: {{ class }}</p>
+    <p>Class: {{ class_name }}</p> 
 
     <h2>Product List</h2>
     <ul>
