--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -29,10 +29,18 @@
         <td>{{ product.description }}</td>
         <td>{{ product.price }}</td>
         <td>
-            <form action="{% url 'main:delete_product_entry' product.id %}" method="POST" style="display:inline;">
-                {% csrf_token %}
-                <button type="submit">Delete</button>
-            </form>
+            <a href="{% url 'main:edit_product' product.pk %}">
+                <button>
+                    Edit
+                </button>
+            </a>
+        </td>
+        <td>
+            <a href="{% url 'main:delete_product' product.pk %}">
+                <button>
+                    Delete
+                </button>
+            </a>
         </td>
     </tr>
     {% endfor %}
@@ -44,7 +52,7 @@
     <a href="{% url 'main:create_name_entry' %}">
         <button>Add New Product Entry</button>
     </a>
-    <a href="{% url 'main:logout_user' %}">
+    <a href="{% url 'main:logout' %}">
         <button>Logout</button>
     </a>
     <h5>Sesi terakhir login: {{ last_login }}</h5>
