--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,31 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        {% block meta %} {% endblock meta %}
-    </head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <script src="https://cdn.tailwindcss.com"></script>
+        <script>
+            tailwind.config = {
+                theme: {
+                        extend: {
+                            fontFamily: {
+                                'Manrope': ['Manrope', 'sans-serif'],
+                                'Poppins': ['Poppins', 'sans-serif'],
+                                'Inter': ['Inter', 'sans-serif'],
+                            },
+                    }
+                }
+            }
+        </script>
+        <link rel="stylesheet" href="{% static "css/global.css" %}">
+        {% block meta %}{% endblock meta %}
+        </head>
     <body>
-        {% block content %} {% endblock content %}
+        <main class="pt-16 font-Inter flex flex-col justify-between">
+            {% block content %} {% endblock content %}
+        </main>
     </body>
 </html>
