--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -9,7 +9,7 @@
 <div class="flex items-center justify-center min-h-screen px-5 bg-gray-100">
   <div class="shadow-xl bg-white p-5 sm:p-10 rounded-3xl flex flex-col gap-10 items-center border-[2px] border-black/5 w-full max-w-md">
     <h2 class="font-bold text-xl sm:text-2xl text-center text-indigo-700">Ayo Belanja</h2>
-    <p class="text-center text-gray-600 text-sm">Create your account to start shopping</p>
+    <p class="text-center text-gray-600 text-sm">Create your account to start BELANJA</p>
 
     <form class="w-full space-y-6" method="POST">
       {% csrf_token %}
