--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -42,6 +42,9 @@
     {% endif %}
 
     <div class="mt-8 space-x-4 text-center">
+        <a href="{% url 'main:create_name_entry' %}" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
+            Add New Product
+        </a>
     </div>
 </div>
 {% endblock content %}
